<?xml version="1.0"?>
<package format="2">
  <name>uom_core</name>
  <version>0.0.1</version>
  <description>The uom_core package</description>
  <maintainer email="tanzby@outlook.com">tanzby</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>uom_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>

</package>
