<?xml version="1.0"?>
<package format="2">
  <name>uom_msgs</name>
  <version>0.0.1</version>
  <description>The uom_msgs package</description>
  <maintainer email="tanzby@outlook.com">tanzby</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>

  <export/>
</package>
